# docs/swagger.json
@@ -21,19 +21,13 @@
                 "summary": "Create product",
                 "parameters": [
                     {
-                        "type": "string",
-                        "name": "Name",
-                        "in": "path"
-                    },
-                    {
-                        "type": "string",
-                        "name": "PK",
-                        "in": "path"
-                    },
-                    {
-                        "type": "number",
-                        "name": "Value",
-                        "in": "path"
+                        "description": "Product data",
+                        "name": "product",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/rest.CreateProductRequest"
+                        }
                     }
                 ],
                 "responses": {
@@ -120,6 +114,20 @@
                     "type": "string"
                 },
                 "value": {
+                    "type": "number"
+                }
+            }
+        },
+        "rest.CreateProductRequest": {
+            "type": "object",
+            "properties": {
+                "Name": {
+                    "type": "string"
+                },
+                "PK": {
+                    "type": "string"
+                },
+                "Value": {
                     "type": "number"
                 }
             }
